<resources>
    <string name="app_name">TaskFlow</string>
    <string name="alertDialog_title_createCategory">Create category</string>
    <string name="alertDialog_title_editCategory">Edit category</string>
    <string name="alertDialog_title_deleteCategory">Delete category</string>
    <string name="alertDialog_message_deleteCategory">¿Are you sure you want to delete the category %1$s?</string>
    <string name="alertDialog_positiveButton_delete">Yes</string>
    <string name="error_texField">Name can\'t be empty</string>
    <string name="alertDialog_positiveButton_create_edit">Save</string>
    <string name="alertDialog_negativeButton">No</string>

    <string name="alertDialog_title_deleteTask">Delete task</string>
    <string name="alertDialog_title_editTask">Edit task</string>
    <string name="alertDialog_title_createTask">Create task</string>
    <string name="alertDialog_message_deleteTask">¿Are you sure you want to delete the task %1$s?</string>
    <string name="swipeleft_delete">Delete</string>
    <string name="swiperight_edit">Edit</string>
    <string name="snackBar_saveTask">Save task</string>
    <string name="quantity_task">%1$d pending tasks</string>

    <string name="hint_nameTask">What to do...</string>
    <string name="hint_descriptionTask">Description (optional)</string>
    <string name="hint_limitDate">Limit date (optional)</string>
    <string name="urgent">Urgent</string>
    <string name="saveTask_button">Save task</string>
    <string name="hint_name">Name</string>
    <string name="hint_menu_reminder">Select period</string>
    <string name="reminder_checkBox">Reminder</string>
    <string name="notification_title">Reminder</string>



</resources>