<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TaskDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nameTask">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            />
    </com.google.android.material.textfield.TextInputLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_descriptionTask">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="5"
                android:lines="3"
                android:gravity="top|start"
                android:inputType="textMultiLine|textCapSentences"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            android:hint="@string/hint_limitDate">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/priorityCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/urgent"/>
            <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content"
                />
            <CheckBox
                android:id="@+id/notificationCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reminder_checkBox"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/reminderInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/reminderDateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@android:drawable/ic_menu_my_calendar"
                android:drawablePadding="16dp"
                android:layout_gravity="start"
                android:text="06/07/2026"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/reminderTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:drawableStart="@android:drawable/ic_lock_idle_alarm"
                android:drawablePadding="32dp"
                android:text="18:30"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/removeReminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Eliminar recordatorio"
                android:textColor="?attr/colorError"
                android:textStyle="bold"/>

        </LinearLayout>


        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saveTask_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>